day-2/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
          labels:
            app: api
    spec:
      imagePullSecrets:
      - name: auth-master3-registry
      containers:
      - name: api
        image: registry.master3.takima.io/guide/kubernetes-resources/api:latest
        ports:
        - containerPort: 8080
