day-2/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: api-ingress
spec:
 rules:
 - host: api.florent-monnet.takima.cloud
   http:
     paths:
     - backend:
         service:
           name: api-service
           port:
             number: 80
       path: /
       pathType: Prefix
